# neural-networks-rs

./: .gitignore  Cargo.toml  formulas.txt  make_flamegraph.fish  rustfmt.toml  todo.txt
data/: circle.csv  gda.csv  knn.csv  neg_square.csv
debug/: circle.csv  gda.csv  knn.csv  nb.csv  neg_square.csv
python-scripts/: generate_data.py  plot_cost.py
src/: activation.rs  ann.rs  ann4.rs  dataset.rs  main.rs  rnncell.rs  sequential.rs
src/activation/: mod.rs  noact.rs  relu.rs  sigmoid.rs  softmax.rs  tanh.rs
src/layers/: actlayer.rs  attention.rs  conv.rs  dense.rs  embedding.rs  layernorm.rs  lstm.rs  maxpool.rs  mod.rs  posencoder.rs  randembedding.rs  relu2d.rs  rnncell.rs  seq2d.rs  sequential.rs  softmax.rs  softmax2d.rs  tokenizer.rs
src/loss/: crossent.rs  mod.rs  mse.rs
src/models/: ann.rs  ann4.rs  cnn.rs  cnn2.rs  cnn3.rs  lstmsent.rs  mod.rs  rnnsent.rs  transformer1.rs
src/optimizers/: adagrad.rs  adam.rs  mod.rs  rmsprop.rs  sgd.rs  sgdmomentum.rs
src/runners/: annrun.rs  cnnrun.rs  mod.rs  rnnrun.rs
