[package]
name = "ann"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.75"
csv = "1.3.0"
finalfusion = "0.18.0"
mnist = { version = "0.6.0", features = ["download"] }
nalgebra = "0.32.3"
ndarray = "0.15.6"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
